# camel-env

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
brain/: README.md  architecture.md  conventions.md  decisions.md  glossary.md  journal.md  open-questions.md  workflow.md
camel_env/: __init__.py
camel_env/agents/: __init__.py
camel_env/dataset/: __init__.py
camel_env/environments/: __init__.py
camel_env/models/: __init__.py
camel_env/runtimes/: __init__.py
camel_env/services/: __init__.py
camel_env/utils/: __init__.py
camel_env/verifiers/: __init__.py
docs/: design.md  roadmap.md
tests/: test_smoke.py
