[project]
name = "camel-env"
version = "0.0.1"
description = "Environment-as-a-service: a framework-agnostic layer between training frameworks and datasets of environments."
readme = "README.md"
requires-python = ">=3.10"  # floor only — newer Pythons work too; not an upper cap
license = { text = "Apache-2.0" }
authors = [{ name = "CAMEL-AI.org" }]

# Core runtime dependencies. Keep minimal; add only when justified.
# Unpinned for now — pin lower bounds later if we hit real incompatibilities.
dependencies = [
    "pyyaml",   # config-via-YAML is a core design aim (docs/design.md)
]

[project.urls]
Homepage = "https://github.com/camel-ai/camel-env"

# Dev tooling, installed via `uv sync`. Bare minimum: format + test.
[dependency-groups]
dev = [
    "ruff",     # lint + format
    "pytest",   # tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camel_env"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, import sorting

[tool.pytest.ini_options]
testpaths = ["tests"]
